--- a/public/sass/base/_typography.scss
+++ b/public/sass/base/_typography.scss
@@ -1,5 +1,5 @@
-$base-font-size: 1.4em;
-$medium: 1.5em;
-$larger: 2.0em;
-$large: 2.5em;
-$x-large: 3em;
+$base-font-size: 1.4rem;
+$medium: 1.5rem;
+$larger: 2.0rem;
+$large: 2.5rem;
+$x-large: 3rem;
