--- a/public/sass/components/_forms.scss
+++ b/public/sass/components/_forms.scss
@@ -6,7 +6,7 @@ form {
   }
 
   input[type=text], input[type=email], input[type=password] {
-    font-size: 1.1em;
+    font-size: 1rem;
     width: 90%;
     padding: 8px 15px;
     border: 1px solid $darker-gray;
