--- a/public/sass/users.scss
+++ b/public/sass/users.scss
@@ -2,6 +2,7 @@
 @import 'components/buttons';
 @import 'components/grids';
 @import 'components/forms';
+@import 'components/messagebox';
 
 .user-form {
   width: 30%;
