--- a/public/sass/users.scss
+++ b/public/sass/users.scss
@@ -2,7 +2,7 @@
 @import 'components/buttons';
 @import 'components/grids';
 @import 'components/forms';
-@import 'components/messagebox';
+@import 'components/message-box';
 
 .user-form {
   width: 30%;
