Adding tabing to item lists

--- a/public/sass/base/_colors.scss
+++ b/public/sass/base/_colors.scss
@@ -14,5 +14,5 @@ $yellow: #F7CA18;
 $dark-gray: #313131;
 $darker-gray: #CACACA;
 $gray: #ECECEC;
-$light-gray: #FCFCFC;
+$light-gray: #edf4fb;
 $white: #FFFFFF;
