--- a/public/sass/base/_base.scss
+++ b/public/sass/base/_base.scss
@@ -6,12 +6,12 @@
   margin: 0;
   padding: 0;
   &:before, &:after {
-    box-sizing: inherit;
+    box-sizing: border-box;
   }
 }
 
 html {
-  font: 62.5%/1.5 'Montserrat', sans-serif;
+  font: 62.5%/1.5 'Montserrat Alternates', sans-serif;
   height: 100%;
   box-sizing: border-box;
 }
@@ -28,7 +28,7 @@ img {
 }
 
 #container {
-  background: #FCFCFC;
+  background: #f0f6fd;
   width: 100%;
   height: 100%;
   position: relative;
